# glimmer

./: .gitignore  Cargo.toml  LICENSE  README.md  style.css
.github/workflows/: build-and-release.yaml  bump.yaml
src/: event_loop_bridge.rs  gtk_utils.rs  main.rs
src/actors/: glimmer_instance.rs  glimmer_manager.rs  glint_instance.rs  glint_manager.rs  i3_ipc.rs  messages.rs  mod.rs  wm_ipc.rs
themes/: example.css  flash.css
