[package]
name = "glimmer"
version = "0.0.2-alpha.0"
authors = ["Daniel Acuna <4857535+moustacheful@users.noreply.github.com>"]
edition = "2018"
description = "A tool for decorating i3/Sway focused windows"
readme = "README.md"
repository = "https://github.com/moustacheful/glimmer/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.0"
gdk = "0.14.0"
cairo-rs = "0.14.0"
glib = "0.14.0"
tokio-i3ipc = "0.12.1"
tokio-stream = "0.1.6"
actix = "0.12"
clap = "3.0.0-beta.2"
