[package]
name = "glimmer"
version = "0.0.3-alpha.0"
authors = ["Daniel Acuna <4857535+moustacheful@users.noreply.github.com>"]
edition = "2018"
description = "A tool for decorating i3/Sway focused windows"
readme = "README.md"
repository = "https://github.com/moustacheful/glimmer/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
cairo-rs = "0.16.1"
clap = { version = "4.0.18", features = ["derive"] }
gdk = "0.16.0"
glib = "0.16.2"
gtk = "0.16.0"
i3ipc-types = "0.15.0"
swayipc = "3.0.1"
swayipc-async = "2.0.1"
tokio-i3ipc = "0.15.0"
tokio-stream = "0.1.6"
